@@ -12,7 +12,7 @@ class OptionalConfirmedPasswordField extends ConfirmedPasswordField {
 	}
 
 	function Field() {
-		Requirements::javascript('ecommerce/javascript/OptionalConfirmedPasswordField.js');
+		Requirements::javascript(ECOMMERCE_DIR.'/javascript/OptionalConfirmedPasswordField.js');
 		Requirements::block(SAPPHIRE_DIR . '/javascript/ConfirmedPasswordField.js');
 		return parent::Field();
 	}
